Made small change to the img div under submain. This is not correct yet but need to get alignment on the left correct.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,10 @@
   margin-left: 50px;
 }
 
+img {
+  margin-left: 150px;
+}
+
 ul {
   display: flex;
   list-style: none;
@@ -37,5 +41,6 @@ a {
   margin-left: 50px;
   margin-right: 50px;
 }
+
 
 /* Look at how to chain css selectors. Need to style the button and text*/
